src/parser_ffi.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_note_view"][::std::mem::size_of::<moenotes_note_view>() - 136usize];
    ["Alignment of moenotes_note_view"][::std::mem::align_of::<moenotes_note_view>() - 8usize];
    ["Offset of field: moenotes_note_view::id"]
        [::std::mem::offset_of!(moenotes_note_view, id) - 0usize];
    ["Offset of field: moenotes_note_view::operate_type"]
        [::std::mem::offset_of!(moenotes_note_view, operate_type) - 4usize];
    ["Offset of field: moenotes_note_view::tick"]
        [::std::mem::offset_of!(moenotes_note_view, tick) - 8usize];
    ["Offset of field: moenotes_note_view::position"]
        [::std::mem::offset_of!(moenotes_note_view, position) - 16usize];
    ["Offset of field: moenotes_note_view::lane_count"]
        [::std::mem::offset_of!(moenotes_note_view, lane_count) - 48usize];
    ["Offset of field: moenotes_note_view::lane_start"]
        [::std::mem::offset_of!(moenotes_note_view, lane_start) - 52usize];
    ["Offset of field: moenotes_note_view::lane_end"]
        [::std::mem::offset_of!(moenotes_note_view, lane_end) - 56usize];
    ["Offset of field: moenotes_note_view::lane_start_float"]
        [::std::mem::offset_of!(moenotes_note_view, lane_start_float) - 64usize];
    ["Offset of field: moenotes_note_view::lane_end_float"]
        [::std::mem::offset_of!(moenotes_note_view, lane_end_float) - 72usize];
    ["Offset of field: moenotes_note_view::width"]
        [::std::mem::offset_of!(moenotes_note_view, width) - 80usize];
    ["Offset of field: moenotes_note_view::critical"]
        [::std::mem::offset_of!(moenotes_note_view, critical) - 88usize];
    ["Offset of field: moenotes_note_view::visible"]
        [::std::mem::offset_of!(moenotes_note_view, visible) - 89usize];
    ["Offset of field: moenotes_note_view::slide_along"]
        [::std::mem::offset_of!(moenotes_note_view, slide_along) - 90usize];
    ["Offset of field: moenotes_note_view::pos_auto"]
        [::std::mem::offset_of!(moenotes_note_view, pos_auto) - 91usize];
    ["Offset of field: moenotes_note_view::pair_note_id"]
        [::std::mem::offset_of!(moenotes_note_view, pair_note_id) - 92usize];
    ["Offset of field: moenotes_note_view::parent_note_id"]
        [::std::mem::offset_of!(moenotes_note_view, parent_note_id) - 96usize];
    ["Offset of field: moenotes_note_view::hidden_for_note_id"]
        [::std::mem::offset_of!(moenotes_note_view, hidden_for_note_id) - 100usize];
    ["Offset of field: moenotes_note_view::line_id"]
        [::std::mem::offset_of!(moenotes_note_view, line_id) - 104usize];
    ["Offset of field: moenotes_note_view::source_index"]
        [::std::mem::offset_of!(moenotes_note_view, source_index) - 108usize];
    ["Offset of field: moenotes_note_view::direction"]
        [::std::mem::offset_of!(moenotes_note_view, direction) - 112usize];
    ["Offset of field: moenotes_note_view::ease_left"]
        [::std::mem::offset_of!(moenotes_note_view, ease_left) - 116usize];
    ["Offset of field: moenotes_note_view::ease_right"]
        [::std::mem::offset_of!(moenotes_note_view, ease_right) - 120usize];
    ["Offset of field: moenotes_note_view::alpha"]
        [::std::mem::offset_of!(moenotes_note_view, alpha) - 124usize];
    ["Offset of field: moenotes_note_view::line_index"]
        [::std::mem::offset_of!(moenotes_note_view, line_index) - 128usize];
    ["Offset of field: moenotes_note_view::generated"]
        [::std::mem::offset_of!(moenotes_note_view, generated) - 132usize];
};
impl Default for moenotes_note_view {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type moenotes_note_view_t = moenotes_note_view;
pub const moenotes_event_type_MOENOTES_EVENT_SKILL: moenotes_event_type = 0;
pub const moenotes_event_type_MOENOTES_EVENT_FEVER: moenotes_event_type = 1;
pub const moenotes_event_type_MOENOTES_EVENT_CALL: moenotes_event_type = 2;
pub type moenotes_event_type = ::std::os::raw::c_uint;
pub use self::moenotes_event_type as moenotes_event_type_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct moenotes_event {
    pub type_: moenotes_event_type_t,
    pub tick: i32,
    pub end_tick: i32,
    pub position: moenotes_position_t,
    pub end_position: moenotes_position_t,
    pub value_count: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_event"][::std::mem::size_of::<moenotes_event>() - 88usize];
    ["Alignment of moenotes_event"][::std::mem::align_of::<moenotes_event>() - 8usize];
    ["Offset of field: moenotes_event::type_"]
        [::std::mem::offset_of!(moenotes_event, type_) - 0usize];
    ["Offset of field: moenotes_event::tick"]
        [::std::mem::offset_of!(moenotes_event, tick) - 4usize];
    ["Offset of field: moenotes_event::end_tick"]
        [::std::mem::offset_of!(moenotes_event, end_tick) - 8usize];
    ["Offset of field: moenotes_event::position"]
        [::std::mem::offset_of!(moenotes_event, position) - 16usize];
    ["Offset of field: moenotes_event::end_position"]
        [::std::mem::offset_of!(moenotes_event, end_position) - 48usize];
    ["Offset of field: moenotes_event::value_count"]
        [::std::mem::offset_of!(moenotes_event, value_count) - 80usize];
};
impl Default for moenotes_event {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type moenotes_event_t = moenotes_event;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_line_sample {
    pub lane_start: f64,
    pub lane_end: f64,
    pub width: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_line_sample"][::std::mem::size_of::<moenotes_line_sample>() - 24usize];
    ["Alignment of moenotes_line_sample"][::std::mem::align_of::<moenotes_line_sample>() - 8usize];
    ["Offset of field: moenotes_line_sample::lane_start"]
        [::std::mem::offset_of!(moenotes_line_sample, lane_start) - 0usize];
    ["Offset of field: moenotes_line_sample::lane_end"]
        [::std::mem::offset_of!(moenotes_line_sample, lane_end) - 8usize];
    ["Offset of field: moenotes_line_sample::width"]
        [::std::mem::offset_of!(moenotes_line_sample, width) - 16usize];
};
pub type moenotes_line_sample_t = moenotes_line_sample;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_line_view {
    pub id: i32,
    pub line_index: i32,
    pub source_index: i32,
    pub begin_note_id: i32,
    pub end_note_id: i32,
    pub guide: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_line_view"][::std::mem::size_of::<moenotes_line_view>() - 24usize];
    ["Alignment of moenotes_line_view"][::std::mem::align_of::<moenotes_line_view>() - 4usize];
    ["Offset of field: moenotes_line_view::id"]
        [::std::mem::offset_of!(moenotes_line_view, id) - 0usize];
    ["Offset of field: moenotes_line_view::line_index"]
        [::std::mem::offset_of!(moenotes_line_view, line_index) - 4usize];
    ["Offset of field: moenotes_line_view::source_index"]
        [::std::mem::offset_of!(moenotes_line_view, source_index) - 8usize];
    ["Offset of field: moenotes_line_view::begin_note_id"]
        [::std::mem::offset_of!(moenotes_line_view, begin_note_id) - 12usize];
    ["Offset of field: moenotes_line_view::end_note_id"]
        [::std::mem::offset_of!(moenotes_line_view, end_note_id) - 16usize];
    ["Offset of field: moenotes_line_view::guide"]
        [::std::mem::offset_of!(moenotes_line_view, guide) - 20usize];
};
pub type moenotes_line_view_t = moenotes_line_view;
pub const moenotes_warning_MOENOTES_WARNING_NONE: moenotes_warning = 0;
pub const moenotes_warning_MOENOTES_WARNING_NONMONOTONIC_LINE: moenotes_warning = 1;
pub const moenotes_warning_MOENOTES_WARNING_SHARED_ENDPOINT: moenotes_warning = 2;
pub type moenotes_warning = ::std::os::raw::c_uint;
pub use self::moenotes_warning as moenotes_warning_t;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_bpm_event {
    pub tick: i32,
    pub bpm: f64,
    pub position: moenotes_position_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_bpm_event"][::std::mem::size_of::<moenotes_bpm_event>() - 48usize];
    ["Alignment of moenotes_bpm_event"][::std::mem::align_of::<moenotes_bpm_event>() - 8usize];
    ["Offset of field: moenotes_bpm_event::tick"]
        [::std::mem::offset_of!(moenotes_bpm_event, tick) - 0usize];
    ["Offset of field: moenotes_bpm_event::bpm"]
        [::std::mem::offset_of!(moenotes_bpm_event, bpm) - 8usize];
    ["Offset of field: moenotes_bpm_event::position"]
        [::std::mem::offset_of!(moenotes_bpm_event, position) - 16usize];
};
pub type moenotes_bpm_event_t = moenotes_bpm_event;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_signature_event {
    pub tick: i32,
    pub numerator: i32,
    pub denominator: i32,
    pub position: moenotes_position_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_signature_event"]
        [::std::mem::size_of::<moenotes_signature_event>() - 48usize];
    ["Alignment of moenotes_signature_event"]
        [::std::mem::align_of::<moenotes_signature_event>() - 8usize];
    ["Offset of field: moenotes_signature_event::tick"]
        [::std::mem::offset_of!(moenotes_signature_event, tick) - 0usize];
    ["Offset of field: moenotes_signature_event::numerator"]
        [::std::mem::offset_of!(moenotes_signature_event, numerator) - 4usize];
    ["Offset of field: moenotes_signature_event::denominator"]
        [::std::mem::offset_of!(moenotes_signature_event, denominator) - 8usize];
    ["Offset of field: moenotes_signature_event::position"]
        [::std::mem::offset_of!(moenotes_signature_event, position) - 16usize];
};
pub type moenotes_signature_event_t = moenotes_signature_event;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct moenotes_command {
    pub time_ms: i32,
    pub current_combo: i32,
    pub current_life: i32,
    pub note_id: i32,
    pub operate_type: moenotes_operate_type_t,
    pub score_type: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_command"][::std::mem::size_of::<moenotes_command>() - 24usize];
    ["Alignment of moenotes_command"][::std::mem::align_of::<moenotes_command>() - 4usize];
    ["Offset of field: moenotes_command::time_ms"]
        [::std::mem::offset_of!(moenotes_command, time_ms) - 0usize];
    ["Offset of field: moenotes_command::current_combo"]
        [::std::mem::offset_of!(moenotes_command, current_combo) - 4usize];
    ["Offset of field: moenotes_command::current_life"]
        [::std::mem::offset_of!(moenotes_command, current_life) - 8usize];
    ["Offset of field: moenotes_command::note_id"]
        [::std::mem::offset_of!(moenotes_command, note_id) - 12usize];
    ["Offset of field: moenotes_command::operate_type"]
        [::std::mem::offset_of!(moenotes_command, operate_type) - 16usize];
    ["Offset of field: moenotes_command::score_type"]
        [::std::mem::offset_of!(moenotes_command, score_type) - 20usize];
};
impl Default for moenotes_command {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type moenotes_command_t = moenotes_command;
unsafe extern "C" {
    pub fn moenotes_version_string() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn moenotes_default_parse_options(options: *mut moenotes_parse_options_t);
}
